--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nextui-org/theme": "2.2.0",
 		"@react-aria/ssr": "^3.9.2",
 		"@react-aria/visually-hidden": "^3.8.10",
+		"@tsparticles/slim": "^3.4.0",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
@@ -38,5 +39,9 @@
 		"tailwind-variants": "^0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
+	},
+	"devDependencies": {
+		"@tsparticles/engine": "^3.4.0",
+		"@tsparticles/react": "^3.0.0"
 	}
 }
